# mastodon-doomscroll-bot

./: .funcignore  Cargo.toml  LICENSE  README.md  host.json  package-lock.json  package.json  samconfig.toml  template.yaml
src/: main.rs
src/handlers/: scheduled-event-logger.mjs
