[package]
name = "doomscrollbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_identity = "0.9.0"
azure_security_keyvault = "0.8.0"
chrono = "0.4.23"
rand = "0.8.5"
reqwest = "0.11.14"
tokio = {"version"= "1.25.0", features=["full"]}
uuid = "1.3.0"
